5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1644_2703.log
== TEST (2019-04-12 16:46:26) 
-- CODE:
a=int(input("Idade: "))
if(a % 2==0)
  print("eleitor")
else :
	print("nao_eleitor")
 
-- ERROR:
File "XXXX", line 2
    if(a % 2==0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:46:51) 
-- CODE:
a=int(input("Idade: "))
if(a)
  print("eleitor")
else :
	print("nao_eleitor")
 
-- ERROR:
File "XXXX", line 2
    if(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:47:37) 
-- CODE:
a=int(input("Idade: "))
if(a % 1)
  print("eleitor")
else :
	print("nao_eleitor")
 
-- ERROR:
File "XXXX", line 2
    if(a % 1)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:48:24) 
-- CODE:
a=int(input("Idade: "))
if(a % 18==0)
  print("eleitor")
else :
	print("nao_eleitor")
 
-- ERROR:
File "XXXX", line 2
    if(a % 18==0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:48:35) 
-- CODE:
a=int(input("Idade: "))
if(a % 18)
  print("eleitor")
else :
	print("nao_eleitor")
 
-- ERROR:
File "XXXX", line 2
    if(a % 18)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:48:54) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 == 18)
  print("eleitor")
else :
	print("nao_eleitor")
 
-- ERROR:
File "XXXX", line 2
    if(a % 2 == 18)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:50:44) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==0) :
   print("eleitor")
else :
	print("nao_eleitor")
 
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:51:36) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==0) :
   print("nao_eleitor")
else :
	print("eleitor")
 
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:51:48) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==0) :
   print("nao_eleitor")
else :
	print("eleitor")
 
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 16:52:05) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==0) :
   print("nao_eleitor")
else :
	print("eleitor")
 

-- EXECUTION TIME:
0.143206
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:52:38) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==18) :
   print("nao_eleitor")
else :
	print("eleitor")
 

-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:53:12) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==18) :
   print("eleitor")
else :
	print("nao_eleitor")
 

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 16:53:24) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==18) :
   print("eleitor")
else :
	print("nao_eleitor")
 

-- EXECUTION TIME:
0.167615
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:55:59) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==18) :
   print("eleitor")
   print("nao_eleitor")
 

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 16:56:31) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==18) :
   print("eleitor")
   print("nao_eleitor")
 

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 16:56:59) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==18) :
   print("eleitor")
   print("nao_eleitor")
 

-- EXECUTION TIME:
0.205007
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:

-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:

-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 19:19:19) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==18) :
   print("eleitor")
else: 
   print("nao_eleitor")
 

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 19:19:34) 
-- CODE:
a=int(input("Idade: "))
if(a % 2 ==18) :
   print("eleitor")
else: 
   print("nao_eleitor")
 

-- EXECUTION TIME:
0.162149
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 19:20:57) 
-- CODE:
a=int(input("Idade: "))
if(a == 18) :
   print("eleitor")
else: 
   print("nao_eleitor")
 

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 19:21:10) 
-- CODE:
a=int(input("Idade: "))
if(a == 18) :
   print("eleitor")
else: 
   print("nao_eleitor")
 

-- EXECUTION TIME:
0.183843
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 19:21:48) 
-- CODE:
a=int(input("Idade: "))
if(a % 18 == 18) :
   print("eleitor")
else: 
   print("nao_eleitor")
 

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 19:22:04) 
-- CODE:
a=int(input("Idade: "))
if(a % 18 == 18) :
   print("eleitor")
else: 
   print("nao_eleitor")
 

-- EXECUTION TIME:
0.200414
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 21:39:50) 
-- CODE:
a=int(input("Idade: "))
if(a % 18 == 18) :
   print("eleitor")
else: 
   print("nao_eleitor")
 

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 21:40:55) 
-- CODE:
a=int(input("Idade: "))
if(a % 18 >= 18) :
   print("eleitor")
else: 
   print("nao_eleitor")
 

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 21:41:21) 
-- CODE:
a=int(input("Idade: "))
if(a >= 18) :
   print("eleitor")
else: 
   print("nao_eleitor")
 

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 21:41:34) 
-- CODE:
a=int(input("Idade: "))
if(a >= 18) :
   print("eleitor")
else: 
   print("nao_eleitor")
 

-- EXECUTION TIME:
0.155979
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
